--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Title
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-favicon: /images/Worfare.jpg
+favicon: /images/favicon-isomer.ico
 
 # Site colors
 colors:
