--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,6 @@ colors:
       color: '#00838f'
 
 
-collections:
-  schemes:
-    output: true
 resources_name: newsroom
 
 ##################################################################################################################
@@ -42,10 +39,13 @@ custom_print_css_path: "/assets/css/print.css"
 paginate: 12
 remote_theme: isomerpages/isomerpages-template@next-gen
 safe: false
+description: test test
+
+staging: https://cpf-workfare-staging.netlify.com
+prod: https://cpf-workfare-prod.netlify.com
 plugins:
   - jekyll-feed
   - jekyll-assets
   - jekyll-paginate
   - jekyll-sitemap
-description: test test
-
+  - jekyll-remote-theme
