--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,18 +1,11 @@
-##################################
-#                                #
-# Feel free to edit this file :) #
-#                                #
-##################################
-
 logo: /images/Worfare.jpg
-
 links:
   - title: Contact Us
     url: /contact-us/
   - title: About Workfare
     url: /about-workfare/
   - title: Stories
-    url: /stories/
+    url: /stories/MdmGohGeokKee
   - title: Wis Calculator
     url: /wis-calculator/
   - title: Online Demo
