--- a/_faqs/collection.yml
+++ b/_faqs/collection.yml
@@ -3,4 +3,4 @@ collections:
     output: true
     order:
       - Workfare Special Payment (WSP).md
-      - faq.md
+      - Workfare Income Supplement (WIS).md
