--- a/_faqs/collection.yml
+++ b/_faqs/collection.yml
@@ -2,5 +2,6 @@ collections:
   faqs:
     output: true
     order:
+      - Test/.keep
       - Workfare Income Supplement (WIS).md
       - Workfare Special Payment (WSP).md
