--- a/_faqs/collection.yml
+++ b/_faqs/collection.yml
@@ -3,5 +3,6 @@ collections:
     output: true
     order:
       - Workfare Income Supplement (WIS).md
+      - Test/General Information on WIS.md
       - Test/.keep
       - Workfare Special Payment (WSP).md
