--- a/_newsroom/collection.yml
+++ b/_newsroom/collection.yml
@@ -2,6 +2,7 @@ collections:
   newsroom:
     output: true
     order:
+      - 2019/.keep
       - Speeches.md
       - Press Release.md
       - Media Articles.md
