--- a/_newsroom/collection.yml
+++ b/_newsroom/collection.yml
@@ -2,6 +2,7 @@ collections:
   newsroom:
     output: true
     order:
+      - PDF(Speeches)/.keep
       - Speeches/2019.md
       - Speeches/.keep
       - Press Release.md
