--- a/_newsroom/collection.yml
+++ b/_newsroom/collection.yml
@@ -2,6 +2,7 @@ collections:
   newsroom:
     output: true
     order:
+      - Speeches/2019.md
       - Speeches/2020.md
       - Speeches/.keep
       - Press Release.md
