--- a/_about-workfare/collection.yml
+++ b/_about-workfare/collection.yml
@@ -2,5 +2,6 @@ collections:
   about-workfare:
     output: true
     order:
+      - Our Social Security System.md
       - About Workfare.md
       - Intent of Workfare.md
