--- a/_newsroom/collection.yml
+++ b/_newsroom/collection.yml
@@ -2,6 +2,7 @@ collections:
   newsroom:
     output: true
     order:
+      - Press Release/Example Title.md
       - Press Release/Press Release 2016.md
       - Press Release/2016.md
       - Press Release/.keep
