--- a/_newsroom/collection.yml
+++ b/_newsroom/collection.yml
@@ -2,7 +2,7 @@ collections:
   newsroom:
     output: true
     order:
-      - Media Articles/Media Articles.md
+      - Media Articles/2020.md
       - Media Articles/.keep
       - Press Release/2019.md
       - Press Release/.keep
