--- a/_newsroom/collection.yml
+++ b/_newsroom/collection.yml
@@ -2,7 +2,7 @@ collections:
   newsroom:
     output: true
     order:
-      - Videos/Videos.md
+      - Videos/Workfare and Other Benefits for Singaporeans.md
       - Videos/.keep
       - Media Articles/.keep
       - Media Articles/2020.md
