--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,7 +22,7 @@ links:
       - title: I am Self-Employed
         url: /permalink
   - title: Newsroom
-    url: /permalink
+    url: /Newsroom/Speeches/2020
     sublinks:
       - title: Submenu Title
         url: /permalink
