--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,3 +21,8 @@ links:
         url: /permalink
       - title: I am Self-Employed
         url: /permalink
+  - title: Menu Title
+    url: /permalink
+    sublinks:
+      - title: Submenu Title
+        url: /permalink
