--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -25,4 +25,4 @@ links:
     url: /permalink
     sublinks:
       - title: Submenu Title
-        url: /permalink
+        url: /Newsroom/Speeches/2020
