--- a/_newsroom/collection.yml
+++ b/_newsroom/collection.yml
@@ -21,6 +21,6 @@ collections:
       - Media Articles/2018.md
       - Videos/.keep
       - Videos/Working with you for a better future in Mandarin.md
-      - Videos/Workfare Working with you for a better future English.md
+      - Videos/Working with you for a better future in English.md
       - Videos/Workfare or Minimum Wage.md
       - Videos/Workfare and Other Benefits for Singaporeans.md
