--- a/_newsroom/collection.yml
+++ b/_newsroom/collection.yml
@@ -19,6 +19,7 @@ collections:
       - Media Articles/.keep
       - Media Articles/2019.md
       - Media Articles/2018.md
+      - Videos/Workfare and Other Benefits for Singaporeans.md
       - Videos/.keep
       - Videos/Working with you for a better future in English.md
       - Videos/Working with you for a better future in Mandarin.md
