--- a/_newsroom/collection.yml
+++ b/_newsroom/collection.yml
@@ -6,6 +6,7 @@ collections:
       - Speeches/.keep
       - Speeches/2019.md
       - Speeches/2016.md
+      - Press Release/2022.md
       - Press Release/.keep
       - Press Release/2019.md
       - Press Release/2016.md
