--- a/_about-workfare/collection.yml
+++ b/_about-workfare/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-workfare:
     output: true
     order:
+      - Holistic Support for Workers.md
       - About Workfare.md
       - Intent of Workfare.md
       - Our Social Security System.md
