--- a/_wss-scheme/collection.yml
+++ b/_wss-scheme/collection.yml
@@ -2,6 +2,7 @@ collections:
   wss-scheme:
     output: true
     order:
+      - Employer/Absentee Payroll.md
       - Employer/.keep
       - Self Employed/.keep
       - Employee/.keep
