--- a/_about-workfare/collection.yml
+++ b/_about-workfare/collection.yml
@@ -7,4 +7,4 @@ collections:
       - Our Social Security System.md
       - Outcomes of Workfare.md
       - Holistic Support for Workers.md
-      - Workfare Work.md
+      - Workfare Works.md
