--- a/_wis-scheme/collection.yml
+++ b/_wis-scheme/collection.yml
@@ -2,5 +2,6 @@ collections:
   wis-scheme:
     output: true
     order:
+      - Employee/Do I qualify?.md
       - Employee/How much?.md
       - Employee/.keep
