--- a/_wis-scheme/collection.yml
+++ b/_wis-scheme/collection.yml
@@ -7,4 +7,4 @@ collections:
       - Employee/How much?.md
       - Employee/When?.md
       - Employee/What must I do?.md
-      - Employee/More Information.md
+      - Employee/More information.md
