--- a/_wis-scheme/collection.yml
+++ b/_wis-scheme/collection.yml
@@ -2,6 +2,7 @@ collections:
   wis-scheme:
     output: true
     order:
+      - When?.md
       - How much?.md
       - Do I qualify?.md
       - Employee/.keep
