--- a/_wis-scheme/collection.yml
+++ b/_wis-scheme/collection.yml
@@ -2,6 +2,7 @@ collections:
   wis-scheme:
     output: true
     order:
+      - Self Employed/More information.md
       - Self Employed/What must I do?.md
       - Self Employed/When?.md
       - Self Employed/How much?.md
