--- a/_wss-scheme/collection.yml
+++ b/_wss-scheme/collection.yml
@@ -2,4 +2,5 @@ collections:
   wss-scheme:
     output: true
     order:
+      - Be rewarded for completing training.md
       - Training allowance for self sponsored trainees.md
