--- a/_wss-scheme/collection.yml
+++ b/_wss-scheme/collection.yml
@@ -2,5 +2,6 @@ collections:
   wss-scheme:
     output: true
     order:
+      - Employee/.keep
       - Be rewarded for completing training.md
       - Training allowance for self sponsored trainees.md
