--- a/_wss-scheme/collection.yml
+++ b/_wss-scheme/collection.yml
@@ -2,5 +2,6 @@ collections:
   wss-scheme:
     output: true
     order:
+      - Employee/Training allowance for self sponsored trainees.md
       - Employee/Be rewarded for completing training.md
       - Employee/.keep
