--- a/_wss-scheme/collection.yml
+++ b/_wss-scheme/collection.yml
@@ -2,6 +2,7 @@ collections:
   wss-scheme:
     output: true
     order:
+      - Training allowance for self sponsored trainees.md
       - Employee/Training allowance for self sponsored trainees.md
       - Employee/Be rewarded for completing training.md
       - Employee/.keep
