--- a/_schemes/collection.yml
+++ b/_schemes/collection.yml
@@ -3,4 +3,4 @@ collections:
     output: true
     order:
       - workfare-income-supplement.md
-      - workfare-training-support.md
+      - Workfare Skills Support (WSS) Scheme.md
