--- a/_stories/collection.yml
+++ b/_stories/collection.yml
@@ -2,4 +2,4 @@ collections:
   stories:
     output: true
     order:
-      - Stories.md
+      - Mdm Goh Geok Kee (Employee) Workfare Recipient .md
