--- a/_stories/collection.yml
+++ b/_stories/collection.yml
@@ -2,4 +2,5 @@ collections:
   stories:
     output: true
     order:
+      - Mr Gunasegaran SO Sellayya (Employee) Workfare Recipient.md
       - Mdm Goh Geok Kee (Employee) Workfare Recipient .md
