--- a/_stories/collection.yml
+++ b/_stories/collection.yml
@@ -2,6 +2,7 @@ collections:
   stories:
     output: true
     order:
+      - Mr Sutharalingam SO Ramalingan (Self Employed) Workfare Recipient.md
       - Ms Nazreen Bano Binte Abu Bakar (Employee) Workfare Recipient.md
       - Mdm Huon Siew Chuo (Employee) Workfare Recipient.md
       - Mr Gunasegaran SO Sellayya (Employee) Workfare Recipient.md
