--- a/_newsroom/collection.yml
+++ b/_newsroom/collection.yml
@@ -2,6 +2,7 @@ collections:
   newsroom:
     output: true
     order:
+      - Speeches/2009.md
       - Speeches/2010.md
       - Speeches/2012.md
       - Speeches/2013.md
