--- a/_newsroom/collection.yml
+++ b/_newsroom/collection.yml
@@ -11,6 +11,7 @@ collections:
       - Speeches/2012.md
       - Speeches/2010.md
       - Speeches/2009.md
+      - Press Release/2011.md
       - Press Release/2022.md
       - Press Release/.keep
       - Press Release/2019.md
