--- a/_newsroom/collection.yml
+++ b/_newsroom/collection.yml
@@ -21,6 +21,7 @@ collections:
       - Press Release/2010.md
       - Press Release/2009.md
       - Press Release/2007.md
+      - Media Articles/2007.md
       - Media Articles/2008.md
       - Media Articles/2009.md
       - Media Articles/2010.md
