--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -2,6 +2,9 @@ contact_us: /contact-us/
 show_reach: true
 feedback: null
 faq: /faqs/WISFAQs
+privacy_policy: /privacy-statement/
+terms_of_use: /terms-of-use/
+copyright_agency: Open Government Products
 social_media:
   facebook: https://www.facebook.com/YourFBPage
   twitter: https://www.twitter.com/YourTwitter
