--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,12 +17,7 @@ links:
         url: /permalink
       - title: I am Self-Employed
         url: /permalink
-  - title: WIS Scheme
-    url: /permalink
-    sublinks:
-      - title: FAQ Employee
-        url: /wis-scheme/permalink
-      - title: Do I qualify?
-        url: /wis-scheme/permalink
   - title: WSS Scheme
     collection: wss-scheme
+  - title: FAQ Accordion
+    url: /wis-scheme/permalink
