--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,4 +20,4 @@ links:
   - title: WSS Scheme
     collection: wss-scheme
   - title: FAQ Accordion
-    url: /faq-accordion
+    url: /faq-accordion/
