--- a/_faqs/collection.yml
+++ b/_faqs/collection.yml
@@ -2,6 +2,7 @@ collections:
   faqs:
     output: true
     order:
+      - test2.md
       - test.md
       - Workfare Income Supplement (WIS).md
       - Workfare Special Payment (WSP).md
