--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,3 +15,5 @@ links:
         url: /permalink
       - title: I am Self-Employed
         url: /permalink
+  - title: LOGIN
+    url: https://safe.menlosecurity.com/https://www.workfare.gov.sg/app/Home/Index
