--- a/_wss-scheme/collection.yml
+++ b/_wss-scheme/collection.yml
@@ -4,6 +4,7 @@ collections:
     order:
       - Employee/.keep
       - Employee/Training allowance for self sponsored trainees.md
+      - Self Employed/Be rewarded for completing training.md
       - Self Employed/.keep
       - Self Employed/Training allowance for self sponsored trainees.md
       - Employer/.keep
