--- a/_stories-2/collection.yml
+++ b/_stories-2/collection.yml
@@ -2,4 +2,5 @@ collections:
   stories-2:
     output: true
     order:
+      - Mr Gunasegaran SO Sellayya (Employee) Workfare Recipient.md
       - Mdm Goh Geok Kee (Employee) Workfare Recipient.md
