--- a/_stories-2/collection.yml
+++ b/_stories-2/collection.yml
@@ -2,5 +2,6 @@ collections:
   stories-2:
     output: true
     order:
+      - Mdm Huon Siew Chuo (Employee) Workfare Recipient.md
       - Mr Gunasegaran SO Sellayya (Employee) Workfare Recipient.md
       - Mdm Goh Geok Kee (Employee) Workfare Recipient.md
