--- a/_stories-2/collection.yml
+++ b/_stories-2/collection.yml
@@ -2,6 +2,7 @@ collections:
   stories-2:
     output: true
     order:
+      - Mr Sutharalingam SO Ramalingam (Self Employed) Workfare Recipient.md
       - Ms Nazreen Bano Binte Abu Bakar (Employee) Workfare Recipient.md
       - Mdm Huon Siew Chuo (Employee) Workfare Recipient.md
       - Mr Gunasegaran SO Sellayya (Employee) Workfare Recipient.md
