--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,5 +17,7 @@ links:
         url: /wis-calculator-for-self-employed/
   - title: LOGIN
     url: https://www.workfare.gov.sg/app/Home/Index
-  - title: Newsroom
+  - title: Newsroom 2
     resource_room: true
+  - title: Stories 2
+    collection: stories-2
