--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Workfare Income Supplement
 url: ""
-favicon: /images/Worfare.JPG
+favicon: /images/W Logo.png
 colors:
   primary-color: "#309449"
   secondary-color: "#309449"
