--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -4,10 +4,4 @@ feedback: null
 faq: /faqs/WISFAQs
 privacy_policy: /privacy-statement/
 terms_of_use: /terms-of-use/
-copyright_agency: Open Government Products
-social_media:
-  facebook: https://www.facebook.com/YourFBPage
-  twitter: https://www.twitter.com/YourTwitter
-  youtube: https://www.youtube.com/YourYoutube
-  instagram: https://www.instagram.com/your.insta/
-  linkedin: https://www.linkedin.com/company/YourAgency
+copyright_agency: Government of Singapore
