--- a/_stories/collection.yml
+++ b/_stories/collection.yml
@@ -2,7 +2,7 @@ collections:
   stories:
     output: true
     order:
-      - Mdm Goh Geok Kee (Employee) Workfare Recipient.md
+      - Mdm Goh Geok Kee.md
       - Mr Gunasegaran SO Sellayya (Employee) Workfare Recipient.md
       - Mdm Huon Siew Chuo (Employee) Workfare Recipient.md
       - Ms Nazreen Bano Binte Abu Bakar (Employee) Workfare Recipient.md
