--- a/_stories/collection.yml
+++ b/_stories/collection.yml
@@ -4,6 +4,6 @@ collections:
     order:
       - Mdm Goh Geok Kee.md
       - Mr Gunasegaran SO Sellayya.md
-      - Mdm Huon Siew Chuo (Employee) Workfare Recipient.md
+      - Mdm Huon Siew Chuo.md
       - Ms Nazreen Bano Binte Abu Bakar (Employee) Workfare Recipient.md
       - Mr Sutharalingam SO Ramalingam (Self Employed) Workfare Recipient.md
