--- a/_stories/collection.yml
+++ b/_stories/collection.yml
@@ -5,5 +5,5 @@ collections:
       - Mdm Goh Geok Kee.md
       - Mr Gunasegaran SO Sellayya.md
       - Mdm Huon Siew Chuo.md
-      - Ms Nazreen Bano Binte Abu Bakar (Employee) Workfare Recipient.md
+      - Ms Nazreen Bano Binte Abu Bakar.md
       - Mr Sutharalingam SO Ramalingam (Self Employed) Workfare Recipient.md
