--- a/_stories/collection.yml
+++ b/_stories/collection.yml
@@ -6,4 +6,4 @@ collections:
       - Mr Gunasegaran SO Sellayya.md
       - Mdm Huon Siew Chuo.md
       - Ms Nazreen Bano Binte Abu Bakar.md
-      - Mr Sutharalingam SO Ramalingam (Self Employed) Workfare Recipient.md
+      - Mr Sutharalingam SO Ramalingam.md
