--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,3 +17,5 @@ links:
         url: /wis-calculator-for-self-employed/
   - title: LOGIN
     url: https://www.workfare.gov.sg/app/Home/Index
+  - title: WIS Calculator
+    collection: wis-calculator
