--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,4 +16,4 @@ links:
       - title: I am Self-Employed
         url: /wis-calculator-for-self-employed/
   - title: LOGIN
-    url: https://www.workfare.gov.sg/app/Home/Index
+    url: https://www.govpayouts.gov.sg/wf/workfare/login
