--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,3 +17,5 @@ links:
         url: /wis-calculator-for-self-employed/
   - title: LOGIN
     url: https://www.govpayouts.gov.sg/wf/workfare/login
+  - title: New folder
+    collection: nav-folder
