--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,5 +17,5 @@ links:
         url: /wis-calculator-for-self-employed/
   - title: LOGIN
     url: https://www.govpayouts.gov.sg/wf/workfare/login
-  - title: New folder
+  - title: Test Nav 1
     collection: nav-folder
