{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"31"}

--- a/_nav-folder/collection.yml
+++ b/_nav-folder/collection.yml
@@ -2,5 +2,6 @@ collections:
   nav-folder:
     output: true
     order:
+      - Nav Item 2/.keep
       - Nav Item 1/Nav Item 1.md
       - Nav Item 1/.keep
