--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,10 +17,12 @@ links:
         url: /wis-calculator-for-self-employed/
   - title: LOGIN
     url: https://www.govpayouts.gov.sg/wf/workfare/login
-  - title: Test Menu Group Nav 1
-    url: /nav-folder/
-    sublinks:
-      - title: Sub Menu 1
-        url: /subfolders/nav-item-1
-      - title: Sub Menu 2
-        url: /subfolders/nav-item-2
+  - title: Test
+    url: /nav-item-1/nav-item-1/
+    - Home: 'Nav Item 1.md'
+      - 'Nav Item 1':
+      - 'Nav Item 1': 'Nav Item 1.md'
+      - 'Nav Item 1.2': 'Nav Item 1 ver 2.md'
+    - About:
+      - 'Nav Item 2': 'Nav Item 2.md'
+      - 'Nav Item 1': 'Nav Item 1.md'
