{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"31"}

--- a/_about-workfare/collection.yml
+++ b/_about-workfare/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-workfare:
     output: true
     order:
+      - Test/.keep
       - About Workfare.md
       - Intent of Workfare.md
       - Our Social Security System.md
