--- a/_about-workfare/collection.yml
+++ b/_about-workfare/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-workfare:
     output: true
     order:
+      - Test/Test Page 1.md
       - Test/.keep
       - About Workfare.md
       - Intent of Workfare.md
