{"message":"Update file: footer.yml","fileName":"footer.yml","userId":"31"}

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,7 +1,7 @@
 contact_us: /contact-us2/
 show_reach: true
-feedback: null
 faq: /faqs/WISFAQs
 privacy_policy: /privacy-statement/
 terms_of_use: /terms-of-use/
 copyright_agency: Government of Singapore
+social_media: {}
