--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
-logo: /images/Workfare Logo.png
+logo: /images/horizontal logos(rendered for wed).png
 links:
   - title: About Workfare
     collection: about-workfare
