{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"31"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,3 +17,13 @@ links:
         url: /wis-calculator-for-self-employed/
   - title: LOGIN
     url: https://www.govpayouts.gov.sg/wf/workfare/login
+  - title: New single page
+    url: /permalink
+  - title: New single page
+    url: /permalink
+  - title: New single page
+    url: /permalink
+  - title: New single page
+    url: /permalink
+  - title: New single page
+    url: /permalink
