--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Workfare
 url: https://www.open.gov.sg
-favicon: /images/horizontal logos(rendered for wed).png
+favicon: /images/square logo.png
 colors:
   primary-color: "#309449"
   secondary-color: "#309449"
