{"message":"Update file: _config.yml","fileName":"_config.yml","userId":"31"}

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Workfare
 url: https://www.open.gov.sg
-favicon: /images/square logo.png
+favicon: /images/apgst browser logo.png
 colors:
   primary-color: "#309449"
   secondary-color: "#309449"
