{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"31"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
-logo: /images/square logo.png
+logo: /images/horizontal logos(rendered for wed).png
 links:
   - title: About Workfare
     collection: about-workfare
